# capsule-fhe-bench

./: CLAUDE.md  Cargo.toml  README.md
results/: BENCHMARK_REPORT.md  bench_results.json  full_cpu_bench.json  full_gpu_bench.json  gpu_bench_results.json
scripts/: detect_hardware.sh  run_full_suite.sh
src/: bench_class_a.rs  bench_class_b.rs  bench_primitives.rs  bench_setup.rs  main.rs  main_gpu.rs  reporting.rs
