[package]
name = "capsule-fhe-bench"
version = "0.1.0"
edition = "2021"
description = "FHE benchmarks for the Capsule Protocol on NVIDIA GB10 / DGX Spark"

[dependencies]
tfhe = { version = "1.5", features = ["integer", "gpu"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

[[bin]]
name = "capsule-bench"
path = "src/main.rs"

[[bin]]
name = "capsule-bench-gpu"
path = "src/main_gpu.rs"

[profile.release]
opt-level = 3
lto = "thin"
